Fixed scrollbar in firefox

--- a/src/app/shared/layout/components/logged-in/logged-in.component.css
+++ b/src/app/shared/layout/components/logged-in/logged-in.component.css
@@ -1,9 +1,9 @@
 #content {
-    min-height: calc(100% - 64px - 51px);
+    min-height: calc(100% - 64px - 52px);
 }
 
 @media (max-width: 599px) {
     #content {
-        min-height: calc(100% - 56px - 51px);
+        min-height: calc(100% - 56px - 52px);
     }   
 }
